separate ui and data operations, change padding and add some error messages

--- a/todo.html
+++ b/todo.html
@@ -20,7 +20,7 @@
                 <input type="text" class="header__input" placeholder="Write your task name">
                 <img src="./img/add-icon.svg" alt="" class="header__add-btn">
             </header>
-            <span class="error">Task with such name already in your task list</span>
+            <span class="error"></span>
             <div class="task-list">
             </div>
         </div>
