add tasks statistics, some styles and refactor code

--- a/todo.html
+++ b/todo.html
@@ -21,6 +21,13 @@
                 <img src="./img/add-icon.svg" alt="" class="header__add-btn">
             </header>
             <span class="error"></span>
+            <div class="statistics">
+                <div class="statistics-item">
+                    <h2 class="statistics-item__title">Выполнено за последнюю неделю:
+                        <span class="statistics-item__value statistics-item__value--week"></span>
+                    </h2>
+                </div>
+            </div>
             <div class="task-list">
             </div>
         </div>
