division of functionality on controllers/repositories/services

--- a/todo.html
+++ b/todo.html
@@ -32,7 +32,6 @@
             </div>
         </div>
     </section>
-    <script type="module" src="./js/taskService.js"></script>
-
+    <script type="module" src="./js/controllers/taskController.js"></script>
 </body>
 </html>
